--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,3 +11,13 @@ form.login_form {
     border-radius: 5px;
     padding: 10px;
 }
+
+form.photo_form {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 450px;
+    background-color: #ffcc99;
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding: 10px;
+}
